feat(cp-schema-registry): ingress support, and stop the sidecar posing as the main container
Ingress is off by default and serves the REST API on servicePort. `name` can
override the Ingress name so an Ingress that already exists under another name
can be adopted instead of duplicated — which is the case in de-data-kafka*,
where it is a standalone manifest called idc-kafka-schema-registry.

The metrics sidecar used to render as containers[0]. That makes `kubectl logs`
and `kubectl exec` without -c hit the exporter instead of Schema Registry, and
it is how this was noticed: a JVM warning that looked like Schema Registry's
turned out to be the sidecar's. The server container now renders first and the
pod sets kubectl.kubernetes.io/default-container.

For the record, what that warning actually was: the old solsson image ran with
-XX:+UseCGroupMemoryLimitForHeap, a JDK 8 flag reading the cgroup v1 path
/sys/fs/cgroup/memory/memory.limit_in_bytes. The nodes are cgroup v2, so the
file is missing, the JVM warned and then sized its heap from host memory —
"Max. Heap Size (Estimated): 26.67G" on a 257Gi node, with no memory limit on
the sidecar to cap it. 0.2.0 dropped those flags and moved to a JRE 21 image
that reads cgroup v2 natively, so this is already fixed; the README now records
why the flags could not simply be carried over.

Published as docs/cp-schema-registry-0.4.0.tgz.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_016VcrXtxcUJTEvWStDcGPKR